src/objects/Apttus_Config2__RelatedAccountLocation__c.object
<CustomObject>
    <description>Holds the relationships between account locations</description>
    <fields>
        <fullName>Apttus_Config2__LocationId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>ID of the account location</description>
        <inlineHelpText>ID of the account location</inlineHelpText>
        <label>Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Related Account Locations (To)</relationshipLabel>
        <relationshipName>RelatedAccountLocationsTo</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedLocationId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>ID of the related account location</description>
        <inlineHelpText>ID of the related account location</inlineHelpText>
        <label>Related Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Related Account Locations (From)</relationshipLabel>
        <relationshipName>RelatedAccountLocationsFrom</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelationType__c</fullName>
        <description>The relation type</description>
        <inlineHelpText>The relation type</inlineHelpText>
        <label>Relation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Related Location</fullName>
                    <default>true</default>
                    <label>Related Location</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Related Account Location</label>
    <nameField>
        <displayFormat>RL-{000000}</displayFormat>
        <label>Related Location Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Account Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>